# together-worker

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
examples/: echo.py  qwen.py
src/: requirements.txt
src/profiler/: client.py  daemon.py  gpu_profiler.py
src/worker/: fast_inference.py
tests/: test_worker.py
together_worker/: cli.py  common.py  fast_inference.py  fast_training.py  runner.py  serving.py  start.py
together_worker/profiler/: daemon.py
worker_lib/: fast_inference.py
worker_lib/profiler/: client.py  daemon.py  gpu_profiler.py
