[tool.poetry]
name = "together_worker"
version = "0.1.0"
description = ""
authors = ["together <together@together.xyz>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/together-computer/worker_lib"
homepage = "https://github.com/together-computer/worker_lib"
keywords = [
    "NLP",
    "vision",
    "speech",
    "deep",
    "learning",
    "transformer",
    "pytorch",
    "tensorflow",
    "BERT",
    "GPT-2"
]

[tool.poetry.dependencies]
python = "^3.7.2,<3.11"
dacite = "^1.6.0"
together-web3 = "^0.1.0"
influxdb-client = "^1.34.0"
pynvml = "^11.4.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^0.971"
mypy-extensions = "^0.4.3"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"
pylint = "^2.14.5"
pytest = "^7.1.2"
pyupgrade = "^2.37.3"
safety = "^2.1.1"
coverage = "^6.4.4"
coverage-badge = "^1.1.0"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
autopep8 = {version = "^1.7.0", allow-prereleases = true}
pytest-timeout = "^2.1.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.1.1"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 100
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true


[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.autopep8]
max_line_length = 96
recursive = true
aggressive = 3


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["worker_lib", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
log_cli = true
log_cli_level = "INFO"
# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]


[tool.coverage.run]
source = ["tests"]

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
